lesson7/nano-idp/lesson-07-ingress-lite/k8s/nginx-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-lite
  labels:
    app: nginx-ingress
spec:
  controller: k8s.io/nginx-lite
