lesson7/nano-idp/lesson-07-ingress-lite/k8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  labels:
    app: test-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-lite
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-backend
            port:
              number: 8000
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-backend
            port:
              number: 8000
